# findemo

./: .gitignore  AGENTS.md  BACKEND_IMPLEMENTATION_COMPLETE.md  CLEAN_AND_TEST.md  CLEAN_REBUILD.sh  DATA_FLOW.md  DEMO_CHECKLIST.md  DEMO_QUICK_START.md  FRONTEND_CHANGES.md  FRONTEND_TESTING_COMPLETE.md  FUTURES_REGENERATION.md  GITHUB_PUSH_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  MANUAL_REBUILD_COMMANDS.md  MARKET_PRICE_CHART_ADDED.md  MULTI_TENANT_ARCHITECTURE.md  PHASE2_BACKEND_SUCCESS.md  PHASE2_FRONTEND_COMPLETE.md  PHASE2_VAR_LOGIC.md  PHASE3_COMPLETE.md  PHASE4_INTEGRATION_COMPLETE.md  PHASE4_PLAN.md  PHASE4_PLAN_UPDATED.md  PORT_SETUP.md  README.md  REDESIGN_COMPLETE.md  RESET_AND_SEED_GUIDE.md  START_HERE.md  TESTING.md  TESTING_DOCKER.md  TESTING_GUIDE.md  TESTING_WITH_REAL_DATA.md  TEST_LOGIN.md  UV_SETUP_GUIDE.md  clean_and_test.sh  debug_login.html  docker-compose.override.yml  docker-compose.yml  test_floating_price_logic.md  test_new_var_api.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  agents (2).md  pyproject.toml  requirements.txt  run_tests.sh
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: database.py  schemas.py
backend/app/routers/: auth.py  data_management.py  futures.py  hedge_session.py  market_data.py  portfolio.py  price_projection.py  upload.py  var.py
backend/app/services/: auth_service.py  exposure_service.py  futures_mock_service.py  (+2 more)
backend/db/: README.md  migrate_to_v2.sql  schema.sql  schema_v2.sql  seed.sql  seed_demo.sql  seed_minimal.sql  seed_v2.sql
backend/tests/: conftest.py  test_api.py  test_database.py
(+53 files in other folders)
